apps/omni-tools/service-omni-tools.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omni-tools
  name: omni-tools
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: omni-tools
