apps/omni-tools/ingress-omni-tools.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-tools
spec:
  ingressClassName: cilium
  rules:
  - host: omni-tools.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: omni-tools
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - omni-tools.almothana.xyz
      secretName: almothana-xyz-tls
